[gd_scene load_steps=10 format=2]

[ext_resource path="res://Data/Enemies/Slime/Hit (44x30).png" type="Texture" id=1]
[ext_resource path="res://Data/Enemies/Slime/Idle-Run (44x30).png" type="Texture" id=2]
[ext_resource path="res://Scripts/Slime.gd" type="Script" id=3]
[ext_resource path="res://Objects/Particles.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 19, 7.83335 )

[sub_resource type="Animation" id=37]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=35]
resource_name = "Idle"
length = 1.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 15.3333, 8.96668 )

[node name="Slime" type="KinematicBody2D"]
position = Vector2( 37, 189 )
scale = Vector2( 0.75, 0.75 )
collision_layer = 4
script = ExtResource( 3 )
color = Color( 0.0784314, 0.380392, 0.00784314, 1 )
particles_tscn = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 10
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.000125885, 5.16672 )
shape = SubResource( 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_speed = 1.4
anims/Dead = SubResource( 37 )
anims/Idle = SubResource( 35 )
anims/RESET = SubResource( 36 )

[node name="KillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2( -0.666649, -2.3 )
shape = SubResource( 29 )

[node name="RayCast" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 20 )

[connection signal="is_dead" from="." to="." method="_on_Slime_is_dead"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="KillArea" to="." method="_on_KillArea_area_entered"]
[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
